...
    case shampoo = "shampoo"
    case bodyWash = "bodywash"
    
    var description: String {
        get {
            switch self {
            case .airDryer: return "Air Dryer"
            case .airFreshener: return "Air Freshener"
            case .automaticDryer: return "Automatic Dryer"
            case .automaticPaperTowel: return "Automatic Paper Towel"
            case .automaticSink: return "Automatic Sink"
            case .automaticToilet: return "Automatic Toilet"
            case .babyChangeStation: return "Baby Change Station"
            case .babyPowder: return "Baby Powder"
            case .bathroomAttendant: return "Bathroom Attendant"
            case .bidet: return "Bidet"
...
            case .heatedSeat: return "Heated Seat"
            case .lotion: return "Lotion"
            case .moistTowelette: return "Moist Towelette"
            case .music: return "Music"
            case .needleDisposal: return "Needle Disposal"
            case .paperSeatCovers: return "Paper Seat Covers"
            case .paperTowel: return "Paper Towel"
            case .perfumeCologne: return "Perfume Cologne"
            case .safetyRail: return "Safety Rail"
            case .sauna: return "Sauna"
            case .shampoo: return "Shampoo"
            case .shower: return "Shower"
            case .tissues: return "Tissues"
...
