...
        .listStyle(GroupedListStyle())
        .navigationBarTitle("\(building.title)", displayMode: .large)
        .navigationBarItems(trailing:
            Button(action: { self.showCreateWashroom = true }, label: {
                HStack {
                    Image(systemName: "plus")
                    Text("Add Washroom")
                }
            })
            .popover(isPresented: $showCreateWashroom, content: { CreateWashroomView(show: self.$showCreateWashroom) } )
        )
    }

...
